--- a/content/article/banner/1.md
+++ b/content/article/banner/1.md
@@ -1,39 +1,39 @@
-![lg1](/core/顶部Banner%20区/01%20banner/sub/lg1.jpg)
+![lg1](/core/子页面/banner1/lg1.jpg)
 
-![lg2](/core/顶部Banner%20区/01%20banner/sub/lg2.jpg)
+![lg2](/core/子页面/banner1/lg2.jpg)
 
-![lg3](/core/顶部Banner%20区/01%20banner/sub/lg3.jpg)
+![lg3](/core/子页面/banner1/lg3.jpg)
 
-![lg4](/core/顶部Banner%20区/01%20banner/sub/lg4.jpg)
+![lg4](/core/子页面/banner1/lg4.jpg)
 
-![lg5](/core/顶部Banner%20区/01%20banner/sub/lg5.jpg)
+![lg5](/core/子页面/banner1/lg5.jpg)
 
-![lg6](/core/顶部Banner%20区/01%20banner/sub/lg6.jpg)
+![lg6](/core/子页面/banner1/lg6.jpg)
 
-![lg7](/core/顶部Banner%20区/01%20banner/sub/lg7.jpg)
+![lg7](/core/子页面/banner1/lg7.jpg)
 
-![lg8](/core/顶部Banner%20区/01%20banner/sub/lg8.jpg)
+![lg8](/core/子页面/banner1/lg8.jpg)
 
-![lg9](/core/顶部Banner%20区/01%20banner/sub/lg9.jpg)
+![lg9](/core/子页面/banner1/lg9.jpg)
 
-![lg10](/core/顶部Banner%20区/01%20banner/sub/lg10.jpg)
+![lg10](/core/子页面/banner1/lg10.jpg)
 
-![lg11](/core/顶部Banner%20区/01%20banner/sub/lg11.jpg)
+![lg11](/core/子页面/banner1/lg11.jpg)
 
-![lg12](/core/顶部Banner%20区/01%20banner/sub/lg12.jpg)
+![lg12](/core/子页面/banner1/lg12.jpg)
 
-![lg13](/core/顶部Banner%20区/01%20banner/sub/lg13.jpg)
+![lg13](/core/子页面/banner1/lg13.jpg)
 
-![lg14](/core/顶部Banner%20区/01%20banner/sub/lg14.jpg)
+![lg14](/core/子页面/banner1/lg14.jpg)
 
-![lg15](/core/顶部Banner%20区/01%20banner/sub/lg15.jpg)
+![lg15](/core/子页面/banner1/lg15.jpg)
 
-![lg16](/core/顶部Banner%20区/01%20banner/sub/lg16.jpg)
+![lg16](/core/子页面/banner1/lg16.jpg)
 
-![lg17](/core/顶部Banner%20区/01%20banner/sub/lg17.jpg)
+![lg17](/core/子页面/banner1/lg17.jpg)
 
-![lg18](/core/顶部Banner%20区/01%20banner/sub/lg18.jpg)
+![lg18](/core/子页面/banner1/lg18.jpg)
 
-![lg19](/core/顶部Banner%20区/01%20banner/sub/lg19.jpg)
+![lg19](/core/子页面/banner1/lg19.jpg)
 
-![lg20](/core/顶部Banner%20区/01%20banner/sub/lg20.jpg)
+![lg20](/core/子页面/banner1/lg20.jpg)
