fix: 2.3 internship pages

--- a/content/article/2/1/0.md
+++ b/content/article/2/1/0.md
@@ -1,2 +1,33 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 中国就业歧视问题调研 |
+|:--------:|:----------:|
+| **项目时间** |   1-3个月    |
+|  **地点**  |     线上     |
+
+
+#### 一．职位描述
+
+1. 调研样本表格填写；
+2. 政策影响（二孩、户籍、学区等）；
+3. 根据样本调查内因结构；
+4. 维权能力报告等。
+
+跨学科领域：
+人权、移民、跨文化包容、可持续发展、全球治理、地区和平与安全、文化遗产、人道主义行动、多边外交、联合国历史和结构、灾难管理、社会组织管理、政治学、经济学、政策分析、国际法基础、政治行为和制度、家庭社会学和性别差异、工作和定向心理学等
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
