--- a/content/article/2/1/10.md
+++ b/content/article/2/1/10.md
@@ -1,2 +1,31 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 中国素质教育发展 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+整合心理学、教育学、人类学和社会学领域的研究和干预观点，从多角度解读素质教育与工作世界联系的教育发展报告，有超高的理论和实践结合度，使用先进研究模型进行训练，结构清晰易懂，有利相关领域人事和兴趣者清晰地展开相关研究。
+
+跨学科领域：
+
+工作和定向心理学、社会文化教育学、教育调解模式、身体教育和游戏方法论、教育服务、社会变革和和家庭教育学、学校和校外创新教育要素、社会不适教育干预的规划与管理、叙事教学法等
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
