--- a/content/article/2/1/18.md
+++ b/content/article/2/1/18.md
@@ -1,2 +1,37 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  |叙事性设计项目概念实施 |
+|:--------:|:----------:|
+| **项目时间** |   1-3个月    |
+|  **地点**  |     线上     |
+
+
+#### 一．职位描述
+
+1. 搜集相关文献资料注明出处，整理国内外研究现状；
+2. 将主要艺术家和典型案例按照论文标准整理；
+3. 整理一份相关设计草图；
+4. 使用手绘或相关软件实现一件（套）作品虚拟方案。
+
+跨学科领域：建筑设计、摄影、景观设计、视觉传达
+
+学生要求：
+1. 良好的英文文献阅读能力；
+2. 会使用3Dmaya、AI等建模软件更佳；
+3. 有较好的素描手绘基本能力。
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
