--- a/content/article/2/1/19.md
+++ b/content/article/2/1/19.md
@@ -1,2 +1,37 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 声音设计作品实践项目 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+1. 整理相关文献资料选定项目类型方向；
+2. 提交作品分镜设计图；
+3. 整理声音素材；
+4. 最终合成作品。
+
+跨学科领域：视觉传达、数字音乐
+
+学生要求：
+
+1. 良好的英文阅读能力；
+2. 会使用Audio City等音源合成软件。
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
