--- a/content/article/2/1/21.md
+++ b/content/article/2/1/21.md
@@ -1,2 +1,38 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 意大利现代博物馆收藏体系报告 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+本项目通过收藏起源的历史资料了解博物馆概念的诞生和应用，根据各个意大利博物馆的表现形式给出收藏报告。
+1. 资料搜集和准备；
+2. 制作现代博物馆发展报告；
+3. 收藏体系报告；
+4. 合成整体论文。
+
+跨学科领域：博物馆学、艺术史、艺术学
+
+学生要求：
+1. 良好的英文阅读能力；
+2. 会使用意大利语更佳；
+3. 具备基础的现代艺术史知识。
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
