--- a/content/article/2/1/23.md
+++ b/content/article/2/1/23.md
@@ -1,2 +1,43 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 意大利时尚与室内设计品牌实践 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+- 意大利时尚设计与时尚文化方向：
+1. 风格创新方案和产品定位方案；
+2. 面料等材料选择和创新方案；
+3. 产品造型确定；
+4. 产品实人展示方案。
+
+- 意大利时尚与设计商务方向：
+1. 行业人员汇总方案；
+2. 趋势分析师方案制定；
+3. 确定行业流行和设计趋势分析方案。
+
+跨学科领域：时尚设计、时尚设计科学、室内设计、家居设计
+
+学生要求：
+1. 会使用相关绘图与模型制作程序；
+2. 具有较好的外语阅读理解能力；
+3. 有一定的素描基础。
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
