--- a/content/article/2/1/27.md
+++ b/content/article/2/1/27.md
@@ -1,2 +1,42 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 欧洲和拉丁美洲商业管理分析 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+方向一：宏观经济（货币、通货膨胀和保护主义）
+
+1. 根据参考资料文献和研究制作工业区经济发展报告；
+2. 根据导师意见整理相关研究方法、模型和论文报告结构；
+3. 根据企业管理数据汇总欧洲和拉美的企业数据报告；
+4. 根据以上样本汇总规律性报告。
+
+方向二：数字化转型（零售和数字化销售）
+
+1. 根据数据进行消费者营销评估；
+2. 地区业务战略数字化转型评估；
+3. 采集样本研究方法进行说明；
+4. 零售和数字销售评估图表报告。
+
+跨学科领域：专业不限
+
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
