--- a/content/article/2/1/3.md
+++ b/content/article/2/1/3.md
@@ -1,2 +1,34 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  |  预防科学中的公共卫生与健康管理训练项目  |
+|:--------:|:-----------:|
+| **项目时间** |    1-3个月    |
+|  **地点**  |     线上      |
+
+
+#### 一．职位描述
+
+1. 了解预防的基础及其分级概念（一级二级三级）；
+2. 国家和地区预防计划 了解二级预防的一般概念，特别是对筛选工具的参考，了解预防机制控制系统的工作方法，了解疾病、诊断测试和健康服务对筛查活动规划的要求；
+3. 了解国家卫生服务组织的基础和表征信息流；
+4. 了解预防服务的组织，根据以上基础内容进行报告汇总。
+
+跨学科领域：
+
+环境和工作场所预防技术（在环境和工作场所中预防技术人员的健康专业）、预防科学、辅助医学、环境监测、医药科学和外科学、公共场所安全和预防组织学、公共卫生预防科学、紧急情况毒理学、一般病理学和感染、职业健康与安全管理体系、防火技术和应急管理、建筑施工中的职业健康与安全、工作场所预防科学、职业卫生、统计学和流行病学、流行病学和疫苗接种策略、职业病和放射防护、工作场所风险评估、普通与应用心理学、空气和水资源卫生、职业流行病学、食品安全预防科学、动物源性食品检测
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
