--- a/content/article/2/1/31.md
+++ b/content/article/2/1/31.md
@@ -1,2 +1,32 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 学校教育者心理学发展和干预模式评估 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+1. 学校心理学：在教学和管理工作中，心理学家的工作、能力以及干预模式分析。
+2. 进行虚拟的干预措施设计方案。
+3. 对敢于漠视设计方案进行实例测试。
+4. 学生心理活动的规划和管理总报告。
+
+跨学科领域：心理学、行为学等相关专业
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
