--- a/content/article/2/1/35.md
+++ b/content/article/2/1/35.md
@@ -1,2 +1,37 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 外语口译和笔译实践 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+二大方向：
+1. 会议口译和视听管理；
+2. 社会商业和行政领域翻译技。
+
+主要内容：
+1. 技能和学习来源准备；
+2. 工作环境和就业管理训练。
+
+跨学科领域：
+英语、意大利语、西班牙语、德语专业
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
+a
