--- a/content/article/2/1/37.md
+++ b/content/article/2/1/37.md
@@ -1,2 +1,32 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 数字化转型管理调研项目 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+1. 深入了解主要的前沿技术的工作原理及其业务、经济和社会影响；
+2. 商业智能和数字技能组合报告；
+3. 管理数字化业务流程图；
+4. 数字化研究模型思维模式和洞察力训练。
+
+（实际工作内容或根据导师安排有所调整）
+
+跨学科领域：工商管理、企业管理、行为经济学、计量经济学、政治舆情、传播科学（新闻传媒）、数字化转型等
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
