--- a/content/article/2/1/4.md
+++ b/content/article/2/1/4.md
@@ -1,2 +1,33 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 疫情大流行时代的数字和IT产业复苏 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+1. 提升熟练运用数字管理业务流程和数字化转型所需的知识和技能的能力；
+2. 深入了解主要前沿技术的工作原理，研究其商业、经济、社会影响；
+3. 获得商业技能和数字技术的正确组合，提升在管理人员和机器的能力，在数字化转型的背景中获得竞争优势。
+
+跨学科领域：
+
+企业管理、行为经济学、计量经济学、数字化转型的IT方法、PPAA中的数字化和流程创新、编程和计算机结构、软件工程、技术与风险防范、业务绩效分析、组织团队与数字化领导力、金融与银行基础、大数据和云平台、机器学习和数据挖掘、数字营销和平台数字化、运营分析、创新战略、网络和移动系统、数字时代的比较政治学、数字经济中的伦理、战略和政治、数字平台法、智慧城市、数据和公共领域服务、数字时代的融合政策、数字科学与计算机思维导论等
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
