--- a/content/article/2/1/41.md
+++ b/content/article/2/1/41.md
@@ -1,2 +1,29 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 音乐市场与管理训练项目 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+音乐和活动管理是指在艺术管理部门以及文化和音乐活动组织中运作的必要技能，主要包括：音乐事业产业、音乐消费、社交媒体营销和音乐推广理论与技术，从音乐经理人到音乐商业计划和推广，是为适应现代音乐发展而进行的训练和实践项目。
+
+跨学科领域：
+音乐产业管理、音乐公司和品牌定位、音乐经理人工作策略、著作法、音乐合同、音乐职业规划和宣传、音乐活动组织与推广、音乐类商业计划
+
+（实际工作内容或根据导师安排有所调整）
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
