--- a/content/article/2/1/42.md
+++ b/content/article/2/1/42.md
@@ -1,2 +1,32 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 叙事性摄影和光影故事本训练项目 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+- 寻找环境与自身或之间的联系，在图像中反映自身并将其再次投射到世界中。
+- 该项目是一个以摄影为基础的概念性训练项目，以叙事性摄影的基本结构进行训练，充分调动摄影相关的多重视觉语言，包括节奏、定格动画、色彩等，参与者需要充分注意在使用摄影技术表达自身的同时，保持自身思想与自然和画面之间的边界感，或是通过符合逻辑的概念去刻意的模糊，以增强画面的独特性，尽可能清晰的制作画面。
+- 本项目在导师指导的过程中将使用大量范例进行初期的概念构建，充分运用灯光、镜头等多种软硬件技术，并最终提交一个完整的摄影作品。
+
+跨学科领域：光学原理、灯光技术、艺术摄影、数字摄影、3D建模、声音设计、定格动画
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
+
