--- a/content/article/2/1/44.md
+++ b/content/article/2/1/44.md
@@ -1,2 +1,35 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 自然科学和自然风险管理实训项目 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+自然灾害、环境难民问题是联合国教科文组织特别关注的重点问题之一，本项目以自然科学为基础并运用气候科学知识进行基础训练、风险评估或可持续自然管理，针对动物、人类生存环境的可持续融合或自然环境的可持续性提升，是一个跨学科程度较强的训练项目。
+
+本项目分为两个方向：1.全球生态系统和可持续发展目标；2.自然管理。
+
+所有方向均可选择在以下方面展开研究：1.生物学；2.地球科学；3.生态学；4.管理政策研究。
+
+跨学科领域：
+
+统计分析建模、气候变化下的动物多样性和分布、植物与全球变化的相互作用、动物气候变化适应性、人类对于自然环境变化的适应性、气候变化对沿海社会和海洋生态系统的影响、监测生态系统变化和功能、生物地理学和宏观生态学、资源与回收、可持续食品技术、农业食品政策、都市农业、气候系统建模、保护生物学、保护遗传学、景观生态学、生态系统检测、植物生态系统保护和栖息地恢复、森林调查和遥感、生物多样性检测与分析、植物健康学、野生动物保护监测技术、古生物地理学
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
