--- a/content/article/2/1/46.md
+++ b/content/article/2/1/46.md
@@ -1,2 +1,32 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 前沿美容科学实训项目 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+项目介绍和能力培养：
+
+前沿美容科学也称为可持续美容科学，旨在培养能够在化妆品公司从事化妆品设计、生产、分析和认证工作的专家，他/她能够应对当前国际法规所带来的新挑战，生产在整个生命周期中更有效且本质上更安全的化妆品。
+ACS具有跨学科精神；它的特点是理论实践，涉及化妆品中使用的天然物质和生物活性分子的研究、化妆品的化学和配方、成分和配方分析。
+
+跨学科领域：化妆品和防晒材料、皮肤学和解剖学、天然香料、化妆品成分分析和质量保证法、化妆品特性、化妆品中的生物活性化合物、化妆品毒理学和功效、抗氧化剂化学、化妆品包装
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
