--- a/content/article/2/1/47.md
+++ b/content/article/2/1/47.md
@@ -1,2 +1,31 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 自然科学的教育学和传播法训练项目 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+- 当今社会的挑战之一是，在媒体和社交网络不断发展世界中，需要提升公民的技术科学知识。
+- 欧盟指出，有效的终身学习必须：1.高质量和包容性；2.注重STEM（科学、技术、工程和数学）技能的获取；3.能够在不同的学习环境中推广多种方法。
+- 因此，我们旨在为学生提供必要的文化工具和技能，以充分融入科学教育和培训的分支供应链，并成为科学内容传播机制创新的创造者和承载者。
+跨学科领域：
+一 般人类学和科学人类学、科学和伪科学思想史、教育调解理论和模型、地质教育学、塑料时代解析、教育学和跨文化交流、科学博物馆和包容性教育、科学教育的策略和工具、科学博物馆和包容性教育、自然科学统计方法、性别与科学
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
