--- a/content/article/2/1/48.md
+++ b/content/article/2/1/48.md
@@ -1,2 +1,30 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 应用经济学和市场学研究项目 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+促进循环经济体系和地方循环，用以活跃疫情后的全球经济，这需要专业支持和大量的数据调研，同时是联合国最新的议题，该项目将涉及多个相关学科和政策研究发发，由学员和导师进行综合性研究并拿出最终方案。
+
+跨学科领域：
+经济学家的定量方法、经济分析统计方法、微观经济分析、公司法、用于政策分析的宏观经济模型、个人行为建模、产业经济、货币经济学、国际经济与贸易、量化金融、金融概率和随机过程、私募股权、风险投资和金融科技融资、绿色金融：资产管理、转型风险和环境社会治理、产业政策和反垄断、商业和经济预测、监管经济学、消费和储蓄经济学、合同理论和激励措施、业务战略决策的经济分析
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
