--- a/content/article/2/1/54.md
+++ b/content/article/2/1/54.md
@@ -1,2 +1,31 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 心灵语言沟通高阶实训提升项目 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+- 心灵语言并不是指完全的非语言，而是能够在不同用于和技能之间灵活转换的能力，为达到训练效果这要求我们使用苏格拉底式方法来质疑学生的意见，并征求批判性思维和积极参与。
+- 该内容包含九个训练专题从基础、心理理论到人机交互，整个过程必须有高度的互动性和头脑风暴，以研究和反思人类思维的本质，语言在构建我们的知识和作为交流工具方面的作用，以及人类思维的多模式、互动和不确定功能。
+- 最终，学生应该能够提出明智的意见和令人信服的解释来回答以下问题：我们如何记忆和理解？语言对我们的思维方式有影响吗？意义在哪里？所有双语者都能翻译吗？当我们学习翻译时我们学到了什么？笔译和口译有什么区别？计算机对我们思考、说话、写作和交流的方式有何影响？
+
+跨学科领域：心灵语言沟通、跨文化和在性别研究导论、现代语言教育、商务沟通、语种间对话解释、语言计算思维、语言文本处理、戏剧、符号间翻译改编、性别语言和包容性沟通、多元化和包容性、语言和无障碍技术、国际政治和机构、营销和企业传播
+
+（实际工作内容或根据导师安排有所调整）
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
+
