--- a/content/article/2/1/55.md
+++ b/content/article/2/1/55.md
@@ -1,2 +1,31 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 现代文学、比较文学和后殖民文学以及女性文学研究提升项目 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+- 欧洲和欧洲以外的外国语言地理区域用语、文学和艺术文化史相关的高理论和实践技能，方法论背景、比较研究、后殖民视角、关系文化、权利和平等机会之间的关系，到性别研究，该项目还提倡多方面和灵活的准备，可用于各个国家和国际部门和机构，也有助于概述未来外语和文学培训师以及语言文化专家的概况，在技术和业务领域也有涉猎。
+
+- 本项目分为1.比较文学和殖民文学2.妇女和性别研究，两个专题。
+
+跨学科领域：浪漫语言学、当代女性史、当代心理和文化变迁、电影和文化研究、当代艺术史、比较文献学、文学与视觉研究、西班牙裔美国文学、葡萄牙和巴西文学、英语国家文学、波兰文学、法国文学、德国文学、俄罗斯文学、现代语言教育、文学批评史、文学社会学、音乐戏剧学、语言地理学、日本文学与文化、北欧文学、加泰罗尼亚文学、英国文化史
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
