--- a/content/article/2/1/57.md
+++ b/content/article/2/1/57.md
@@ -1,2 +1,32 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 人类营养学和欧盟专业营养师前沿训练 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+- 该项目旨在培养营养学学生能够获得在考虑健康需求的情况下完成高质量工作所需的知识、技能和能力。
+- 它允许学生在与课堂练习不同的环境中，以责任和自主的方式深化具体和专业化的技术。
+- 营养学主要目标是培养能够在预防和临床领域、集体餐饮和研究领域开展与营养和营养学相关的具体活动的专业人才。
+- 欧洲饮食协会联合会（EFAD）将营养师定义为“具有法律认可的营养和饮食学资格的人，他们将营养科学应用于健康或疾病人群和个人的营养和教育”。
+
+跨学科领域：食品和人类营养、营养生物化学、营养生理学、应用膳食技术科学、应用膳食技术科学
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
