--- a/content/article/2/1/8.md
+++ b/content/article/2/1/8.md
@@ -1,7 +1,7 @@
 ### 联合国教科文组织意大利青年教育研究中心实习
 
 
-|  **方向**  | 地区教育的不平等和缓解方案研究 |
+|  **方向**  | 气候问题治理和零碳经济发展 |
 |:--------:|:------------:|
 | **项目时间** |    1-3个月     |
 |  **地点**  |      线上      |
@@ -9,9 +9,9 @@
 
 #### 一．职位描述
 
-该项目的训练充分参考采用部分最新数据并由参与者自行选题调研，充分训练相关专题的全部调研流程，对进入相关专题和思维能力培养具有很大帮助。
+为缓解和适应气候变化问题，为脱碳事业研究和预备学习以及相关的兴趣和专业人士提供前所未有的多元文化体验。
 
-跨学科领域：区域经济、预备宏观经济、政策分析、社会学与社会研究、不平等增长、收入初次分配、政治行为和制度、公共政策分析评估、公共部门的环境和社会了可持续性、全纳教育和社会包容的生态方法、家庭社会学和性别差异、发展心理学、社会教育融合教学法、教育服务、社会变革和和家庭教育学
+跨学科领域：气候科学、环境科学、资源经济学与可持续发展、公共部门环境和社会可持续性、环境分析与管理、生物多样性和进化、环境和材料化学技术、低碳技术和可持续化学
 
 （实际工作内容或根据导师安排有所调整）
 
