--- a/content/article/2/1/1.md
+++ b/content/article/2/1/1.md
@@ -1,2 +1,34 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 艺术治疗师能力训练 |
+|:--------:|:---------:|
+| **项目时间** |   1-3个月   |
+|  **地点**  |    线上     |
+
+
+#### 一．职位描述
+
+作为视觉语言专家，能够在与心理和/或社会环境不适相关的治疗团队的工作中进行互动，艺术治疗师将艺术语言作为一种有利于“照顾他人”的表达可能性进行实验。
+
+在日常的训练中除了正面教学活动、个人研究、参加会议、研讨会、讲习班和实习、艺术创作、在医疗机构或社会教育机构中建立艺术治疗实验室；在各种附属的社会教育和卫生结构中实习被认为对于促进实现培训目标和追求较高的艺术治疗专业水平至关重要。
+
+该项目的目的是为了推动一个新的职业群体艺术治疗师（art-therapist）在实践中的专业表现的训练项目。
+
+跨学科领域：
+
+绘画、当代艺术史、想象原型塑造、艺术心理学、艺术教育学和教学法、当代音乐史、色谱、艺术治疗原理与技巧、艺术治疗原理与技巧、童年的创意实践、综合表现技术和手法、身体现象学、艺术治疗的历史和模式、美术教育与传播
+
+（实际工作内容或根据导师安排有所调整）
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
