--- a/content/article/2/1/11.md
+++ b/content/article/2/1/11.md
@@ -1,2 +1,31 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 中国大学生心理健康教育 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+在全球范围内，青少年因精神疾病致残或死亡，每年造成的人力潜能损失据估算高达近3900亿美元，心理问题带来的影响往往造成终生效应，是一个不容忽视的研究领域，该研究充分考虑生活环境、家庭和学校教育人际关系和人道主义危机、突发事件等第三方因素对学生心理健康的影响，采用前沿数据和方法独立展开自选主题调研，是相关训练中最具综合性和实效性的研究之一。
+
+跨学科领域：
+
+发展心理学、情感和性关系教育、群体心理学、青少年心理学、边缘化和越轨行为的特殊教育、学校和校外创新教育要素、工作和定向心理学、教育调解模式方法论等
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
