--- a/content/article/2/1/16.md
+++ b/content/article/2/1/16.md
@@ -1,2 +1,38 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 展览策划-意大利现代艺术 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+1. 相关理论资料和知识的准备；
+2. 根据主题定位遴选艺术家；
+3. 制作展览海报和展览多媒体文件；
+4. 展览各项数据的比对评估由学员给出展览数据报告。
+
+跨学科领域：
+
+艺术学、现当代艺术史、艺术经济市场、艺术管理、艺术品收藏、策展学、视觉传达、舞台美术
+
+学生要求：
+1. 具备一定的英文表达和阅读能力；
+2. 会使用相关做图软件（AI、PS等）。
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
