--- a/content/article/2/1/25.md
+++ b/content/article/2/1/25.md
@@ -1,2 +1,36 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 现代影视导演项目实践（舞台美术和音乐剧以及灯光方向） |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+1. 根据导师指定三个不同方向观看电影；
+2. 根据电影与戏剧关系自选指定电影7部观看；
+3. 根据相关影片整理参考书目；
+4. 给出电影艺术风格和要点报告。
+
+跨学科领域：专业不限
+
+学生要求：
+1. 具有一定的音乐和艺术史基础为宜；
+2. 具有小语种能力更佳。
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
