--- a/content/article/2/1/26.md
+++ b/content/article/2/1/26.md
@@ -1,2 +1,33 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 欧洲多语言文字包容性研究实践 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+教育学领域语言功能拓展研究：
+1. 根据导师提供的资料对无障碍语言学进行功能性分析；
+2. 字幕和辅助手段分析报告；
+3. 盲人、视障等特殊群体人群分析；
+4. 结合以上结果进行包容性和沟通能力分析。
+
+跨学科领域：专业不限
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
