--- a/content/article/2/1/39.md
+++ b/content/article/2/1/39.md
@@ -1,2 +1,34 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 前沿数学运用：生物人口统计学实训项目 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+项目介绍和能力培养：
+
+对调查对象能够进行基础的数据分析，是支持一切科学措施的基础，项目旨在培养能够构建、处理、分析和解释与经济和人口健康现象相关的数据的专家。
+其特点是数学、统计学和计算机科学的共同运用以及各种应用环境中的特定技能。对所调查现象进行定量分析的必要技能，以便得出支持决策的结论。
+为此，该项目同时可以支持众多实验室的理论研究以及在公司或公共机构进行实习的可能性。
+
+跨学科领域： 人口统计学、统计与概率、线性代数、时间序列、计量经济学、调查抽样法、多元分析、统计模型、记录联动、数据库集成统计法IC、社会统计、采样和数据分析
+
+（实际工作内容或根据导师安排有所调整）
+
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
