--- a/content/article/2/1/50.md
+++ b/content/article/2/1/50.md
@@ -1,2 +1,32 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 文化艺术创新与组织管理实训项目 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+- 该项目是一个跨学科项目，旨在培养国际艺术、文化和创意部门组织未来领导者的技能。
+- 其重点关注文化组织中的应用管理知识和变革流程，主题范围从公共资金转型的影响到数字革命等。
+- 它基于强大的跨学科方法，结合了商业研究、社会学和人文学科。
+- 最终实现获得全球视野并提高他们的创业技能。
+
+跨学科领域：视觉艺术管理、演艺管理、项目管理和筹款、艺术组织项目管理基础、公共经济学原理、艺术管理与民族志、文化经济学、艺术会计和法律、艺术和文化领域的会计、艺术鉴赏、领土与文化社会学
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
