--- a/content/article/2/1/56.md
+++ b/content/article/2/1/56.md
@@ -1,2 +1,29 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 女性艺术和艺术史研究项目 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+项目介绍和能力培养：女性艺术尤其是在现代艺术领域是一个艺术学和社会学相交织的复杂学科，并且需要了解一定的现代欧洲比较艺术史的知识，通过该项目学习使用正确的术语进行批判认识女性艺术的能力。
+
+跨学科领域：专业不限
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
