--- a/content/article/2/1/7.md
+++ b/content/article/2/1/7.md
@@ -1,2 +1,29 @@
+### 联合国教科文组织意大利青年教育研究中心实习
 
-#### 请联系我们了解详情
+
+|  **方向**  | 全球可持续时尚产业发展 |
+|:--------:|:------------:|
+| **项目时间** |    1-3个月     |
+|  **地点**  |      线上      |
+
+
+#### 一．职位描述
+
+联合国际教科文组织呼吁可持续时尚产业，目前很多大牌都开始进入可再生和替代材料的研发和使用中，在节约了成本的同时增加了商品的延展性和功能性，该项目的调研极具应用价值，与我们的日常生活息息相关，通过相关的调查为可持续时尚定位，理清为何并且如何开展一个可持续的时尚产业。
+
+跨学科领域：时尚科学文化、时尚管理、时尚设计、时尚趋势分析、绿色能源金融市场（环境金融、可再生技术）、气候与商业科学、公共部门环境和社会可持续性、精准可持续农业（精准大田裁剪、精准畜牧业、可持续水资源管理）、循环经济中的动物和作物管理、用于可持续过程的生物和微生物技术、智能农业系统的物联网和大数据
+
+（实际工作内容或根据导师安排有所调整）
+
+
+#### 二．任职要求
+
+1. 在读高中生、大学生
+2. 有一定英语基础
+3. 每周工作时间不低于25小时
+4. 联合国教科文组织官方实习证明，官网可查可验证
+5. 表现优异者可获得联合国教科文组织意大利中心专家签署推荐信
+
+
+#### 三．报名链接
+[点击立刻报名](https://ezygcyygfb.feishu.cn/share/base/form/shrcnyoWDn0NwQnTyfwrxo3XOnh)
