feat: add new intern data

--- a/content/article/1/1.md
+++ b/content/article/1/1.md
@@ -6,9 +6,11 @@ date: 2021-12-24
 
 ### 机构简介
 
-#### 关于意大利联合国教科文组织青训中心
+#### 关于意大利联合国教科文组织意大利中心或青年教育研究中心
 
-意大利联合国教科文组织青训中心或青年教育研究中心（以下简称 CREGU），其最早的发展始于 1985 年成立的意大利教科文组织全国委员会青年委员会。2000 年初性质变更后，转由联合国教科文组织协会意大利全国联合会担任业务指导部门，托斯卡纳省文化处担任业务主管部门。现中心更名于 2015 年，中心目前专注教科文框架下的青训和相关倡议活动举办，推进可持续教科文事业，推广 2030 教科文发展倡议。中心积极发展前沿学科训练和文化艺术实践活动，重视对非常规新研究方法的讨论，探索跨学科行业研究新领域。目前中心拥有 42 个不同学科领域的青训项目，下设有各大国际企业和著名高校专家组成的专家委员会、理论委员会、国际智库专家委员会、青年训练营等下设委员会和职能部门。
+意大利联合国教科文组织意大利中心或青年教育研究中心（以下简称CREGU），其最早的发展始于1985年成立的意大利教科文组织全国委员会青年委员会。2000年初变更后，转由联合国教科文组织协会意大利全国联合会担任业务指导部门，托斯卡纳省文化处担任业务主管部门。现中心更名于2015年，中心目前专注教科文框架下的青训和相关倡议活动举办，推进可持续教科文事业，推广2030教科文发展倡议。中心积极发展前沿学科训练和文化艺术实践活动，重视对非常规新研究方法的讨论，探索跨学科行业研究新领域。目前中心拥有60个不同学科领域的青训项目，下设有各大国际企业和著名高校专家组成的专家委员会、理论委员会、国际智库专家委员会、青年训练营等下设委员会和职能部门。
+
+2023年4月正式进入中国，为中国学生提供意大利公立高校留学指导服务，并与国内各大国际高中、高校合作开展联合国教科文100个主题课程实训、夏（冬）令营、研学、联合国机构参访、各类公益活动，促进中意文化教育交流合作办学等多项使命。
 
 #### 关于联合国教科文组织
 
@@ -25,3 +27,7 @@ date: 2021-12-24
 3. 制订准则：起草和通过国际文件和法律建议。
 4. 知识和技术：以“技术合作”的形式提供给会员国制订发展政策和发展计划。
 5. 专门化信息的交流。
+
+#### 联合国组织框架图
+
+![联合国组织框架图](/core/子页面/关于我们/org.png)
